network.yml
Description: >
    A VPC deploys a pair of public and private subnets over two Availabilty Zones (AZ). 
    A pair of NAT Gateways (one in each AZ), is set on the private subnets to allow for private acccess.
    Separate Internet Gateways, with a default route, is set on the public subnets to allow for public access.
Parameters:
    Environment:
        Description: A resource environment name to prefix resources
        Type: String
    VpcCIDR: 
        Description: Enter this VPC's (CIDR) IP range
        Type: String
        Default: 10.0.0.0/16 
    PubSubnet1CIDR:
        Description: Enter the first Availability Zone's public subnet (CIDR) IP range 
        Type: String
        Default: 10.0.0.0/24
    PrivSubnet1CIDR:
        Description: Enter the first Availability Zone's private subnet (CIDR) IP range 
        Type: String
        Default: 10.0.2.0/24
    PubSubnet2CIDR:
        Description: Enter the second Availability Zone's public subnet (CIDR) IP range 
        Type: String
        Default: 10.0.1.0/24
    PrivSubnet2CIDR:
        Description: Enter the second Availability Zone's private subnet (CIDR) IP range 
        Type: String
        Default: 10.0.3.0/24
Resources:
    VPC: 
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags: 
                - Key: Name 
                  Value: !Ref Environment
    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Ref Environment        
    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC
    PubSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref PubSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${Environment} Public Subnet (AZ1)
    PrivSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref PrivSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${Environment} Private Subnet (AZ1)
    PubSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref PubSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${Environment} Public Subnet (AZ2)
    PrivSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref PrivSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${Environment} Private Subnet (AZ2)
    NatGateway1EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties: 
            Domain: vpc
    NatGateway2EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
            Domain: vpc
    NatGateway1: 
        Type: AWS::EC2::NatGateway
        Properties: 
            AllocationId: !GetAtt NatGateway1EIP.AllocationId
            SubnetId: !Ref PubSubnet1
    NatGateway2: 
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGateway2EIP.AllocationId
            SubnetId: !Ref PubSubnet2
    PubRouteTable:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name
                  Value: !Sub ${Environment} Public Routes
    DefaultPubRoute: 
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties: 
            RouteTableId: !Ref PubRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway
    PubSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PubRouteTable
            SubnetId: !Ref PubSubnet1
    PubSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PubRouteTable
            SubnetId: !Ref PubSubnet2
    PrivRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${Environment} Private Routes (AZ1)
    DefaultPrivRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway1
    PrivSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivRouteTable1
            SubnetId: !Ref PrivSubnet1
    PrivRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${Environment} Private Routes (AZ2)
    DefaultPrivRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway2
    PrivSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivRouteTable2
            SubnetId: !Ref PrivSubnet2
Outputs: 
    VPC: 
        Description: References current created VPC
        Value: !Ref VPC
        Export:
          Name: !Sub ${Environment}-VPCID
    VPCPubRouteTable:
        Description: Public Routing
        Value: !Ref PubRouteTable
        Export:
          Name: !Sub ${Environment}-PUB-RT
    VPCPrivRouteTable1:
        Description: Private Routing AZ1
        Value: !Ref PrivRouteTable1
        Export:
          Name: !Sub ${Environment}-PRI1-RT
    VPCPrivRouteTable2:
        Description: Private Routing AZ2
        Value: !Ref PrivRouteTable2
        Export:
          Name: !Sub ${Environment}-PRIV2-RT
    PubSubnets:
        Description: A list of the public subnets
        Value: !Join [ ",", [ !Ref PubSubnet1, !Ref PubSubnet2 ]]
        Export:
          Name: !Sub ${Environment}-PUB-NETS
    PrivSubnets:
        Description: A list of the private subnets
        Value: !Join [ ",", [ !Ref PrivSubnet1, !Ref PrivSubnet2 ]]
        Export:
          Name: !Sub ${Environment}-PRIV-NETS
    PubSubnet1:
        Description: References 1st Availability Zone's public subnet
        Value: !Ref PubSubnet1
        Export:
          Name: !Sub ${Environment}-PUB1-SN
    PrivSubnet1:
        Description: References 1st Availability Zone's private subnet
        Value: !Ref PrivSubnet1
        Export:
          Name: !Sub ${Environment}-PRIV1-SN
    PubSubnet2: 
        Description: References 2nd Availability Zone's public subnet
        Value: !Ref PubSubnet2
        Export:
          Name: !Sub ${Environment}-PUB2-SN
    PrivSubnet2: 
        Description: References 2nd Availability Zone's private subnet
        Value: !Ref PrivSubnet2
        Export:
          Name: !Sub ${Environment}-PRI2-SN
